@@ -41,6 +41,10 @@ describe("opentracing.span", function()
 			new_span(tracer, context, "foo", {})
 		end)
 	end)
+	it("can retreive tracer with :tracer()", function()
+		local span = new_span(tracer, context, "foo", 0)
+		assert.same(tracer, span:tracer())
+	end)
 	it("can construct with :start_child_span", function()
 		local span1 = new_span(tracer, context, "foo", 0)
 		local span2 = span1:start_child_span("bar", 1)
