@@ -1,6 +1,7 @@
 UNRELEASED
 
   - Allow unsetting a tag with :set_tag(k, nil)
+  - Add span:tracer() to get a span's tracer object
 
 
 0.0.1 - 2018-05-18
